--- a/index.html
+++ b/index.html
@@ -6,66 +6,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>YouTube.com Clone</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles/general.css">
-  <link rel="stylesheet" href="../styles/header.css">
-  <link rel="stylesheet" href="../styles/sidebar.css">
-  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="styles/general.css">
+  <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/sidebar.css">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
   <div class="header">
     <div class="left-section">
-      <img class="hamburger-menu" src="../icons/hamburger-menu.svg">
-      <img class="youtube-logo" src="../icons/youtube-logo.svg">
+      <img class="hamburger-menu" src="icons/hamburger-menu.svg">
+      <img class="youtube-logo" src="icons/youtube-logo.svg">
     </div>
     <div class="middle-section">
       <input class="search-bar" type="text" placeholder="Search">
       <button class="search-button">
-        <img class="search-icon" src="../icons/search.svg">
+        <img class="search-icon" src="icons/search.svg">
         <div class="tooltip">Search</div>
       </button>
       <button class="voice-search-button">
-        <img class="voice-search-icon" src="../icons/voice-search-icon.svg">
+        <img class="voice-search-icon" src="icons/voice-search-icon.svg">
         <div class="tooltip">Search with your voice</div>
       </button>
     </div>
     <div class="right-section">
       <div class="upload-icon-container">
-        <img class="upload-icon" src="../icons/upload.svg">
+        <img class="upload-icon" src="icons/upload.svg">
         <div class="tooltip">Create</div>
       </div>
-      <img class="youtube-apps-icon" src="../icons/youtube-apps.svg">
+      <img class="youtube-apps-icon" src="icons/youtube-apps.svg">
       <div class="notifications-icon-container">
-        <img class="notifications-icon" src="../icons/notifications.svg">
+        <img class="notifications-icon" src="icons/notifications.svg">
         <div class="notifications-count">3</div>
       </div>
-      <img class="current-user-picture" src="../icons/black.webp">
+      <img class="current-user-picture" src="icons/black.webp">
     </div>
   </div>
 
   <div class="sidebar">
     <div class="sidebar-link">
-      <img src="../icons/home.svg">
+      <img src="icons/home.svg">
       <div>Home</div>
     </div>
     <div class="sidebar-link">
-      <img src="../icons/explore.svg">
+      <img src="icons/explore.svg">
       <div>Explore</div>
     </div>
     <div class="sidebar-link">
-      <img src="../icons/subscriptions.svg">
+      <img src="icons/subscriptions.svg">
       <div>Subscriptions</div>
     </div>
     <div class="sidebar-link">
-      <img src="../icons/originals.svg">
+      <img src="icons/originals.svg">
       <div>Originals</div>
     </div>
     <div class="sidebar-link">
-      <img src="../icons/youtube-music.svg">
+      <img src="icons/youtube-music.svg">
       <div>YouTube Music</div>
     </div>
     <div class="sidebar-link">
-      <img src="../icons/library.svg">
+      <img src="icons/library.svg">
       <div>Library</div>
     </div>
   </div>
@@ -73,12 +73,12 @@
   <div class="video-grid">
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="../thumbnails/thumbnail-1.webp">
+        <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
         <div class="video-time">14:20</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
-          <img class="profile-picture" src="../channels/channel-1.jpeg">
+          <img class="profile-picture" src="channels/channel-1.jpeg">
         </div>
         <div class="video-info">
           <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
@@ -90,12 +90,12 @@
 
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="../thumbnails/thumbnail-2.webp">
+        <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
         <div class="video-time">8:22</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
-          <img class="profile-picture" src="../channels/channel-2.jpeg">
+          <img class="profile-picture" src="channels/channel-2.jpeg">
         </div>
         <div class="video-info">
           <p class="video-title">Try Not To Laugh Challenge #9</p>
@@ -107,12 +107,12 @@
 
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="../thumbnails/thumbnail-3.webp">
+        <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
         <div class="video-time">9:13</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
-          <img class="profile-picture" src="../channels/channel-3.jpeg">
+          <img class="profile-picture" src="channels/channel-3.jpeg">
         </div>
         <div class="video-info">
           <p class="video-title">Crazy Tik Toks Taken Moments Before DISASTER</p>
@@ -124,12 +124,12 @@
 
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="../thumbnails/thumbnail-4.webp">
+        <img class="thumbnail" src="thumbnails/thumbnail-4.webp">
         <div class="video-time">22:09</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
-          <img class="profile-picture" src="../channels/channel-4.jpeg">
+          <img class="profile-picture" src="channels/channel-4.jpeg">
         </div>
         <div class="video-info">
           <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
@@ -141,12 +141,12 @@
 
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="../thumbnails/thumbnail-5.webp">
+        <img class="thumbnail" src="thumbnails/thumbnail-5.webp">
         <div class="video-time">11:17</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
-          <img class="profile-picture" src="../channels/channel-5.jpeg">
+          <img class="profile-picture" src="channels/channel-5.jpeg">
         </div>
         <div class="video-info">
           <p class="video-title">Kadane's Algorithm to Maximum Sum Subarray Problem</p>
@@ -158,12 +158,12 @@
 
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="../thumbnails/thumbnail-6.webp">
+        <img class="thumbnail" src="thumbnails/thumbnail-6.webp">
         <div class="video-time">19:59</div>
       </div>
       <div class="video-info-grid">
         <div class="channel-picture">
-          <img class="profile-picture" src="../channels/channel-6.jpeg">
+          <img class="profile-picture" src="channels/channel-6.jpeg">
         </div>
         <div class="video-info">
           <p class="video-title">Anything You Can Fit In The Circle I’ll Pay For</p>
@@ -176,3 +176,4 @@
 </body>
 
 </html>
+
